# internvl-receipt-counter

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.yaml  remote_server_training.md
data/: __init__.py  dataset.py
data/data_generators/: __init__.py  create_collage_dataset.py  create_receipt_collages.py  create_synthetic_receipts.py  receipt_processor.py
evaluation/: __init__.py  evaluator.py
models/: __init__.py  internvl2.py
models/components/: __init__.py  projection_head.py
scripts/: evaluate.py  generate_data.py  train.py
training/: __init__.py  trainer.py
utils/: __init__.py  device.py  huggingface_model_download.py  logging.py  reproducibility.py
